# nautilus

./: .env.example  .gitignore  Cargo.toml
src/: app.rs  config.rs  main.rs
src/bot/: handler.rs  mod.rs  ratelimit.rs  router.rs  session.rs  settings.rs  status.rs  topic_settings.rs
src/bot/commands/: about.rs  check.rs  dl.rs  help.rs  mod.rs  settings.rs  speedtest.rs  start.rs  stats.rs  status.rs
src/provider/: mod.rs  registry.rs  ytdlp.rs
src/provider/astra/: client.rs  endpoint.rs  mod.rs  types.rs
src/provider/scraper/: helpers.rs  mod.rs
src/provider/scraper/extractors/: capcut.rs  instagram.rs  linkedin.rs  mod.rs  pinterest.rs  reddit.rs  soundcloud.rs  spotify.rs  terabox.rs  threads.rs  tiktok.rs  twitter.rs
src/streaming/: mod.rs  progress.rs
